# Velocity

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  EXAMPLE.env  README_LINERA_DEX.md  compose.yaml  package-lock.json  package.json  postcss.config.mjs  run.bash
app/: globals.css  layout.tsx  page.tsx
app/arbitrage/: page.tsx
app/dex/: page.tsx
app/liquidity/: page.tsx
app/pools/: page.tsx
components/: bot-settings.tsx  bot-status.tsx  create-pool-modal.tsx  header.tsx  liquidity-card.tsx  opportunities-list.tsx  pool-positions.tsx  pool-selector.tsx  pools-list.tsx  price-display.tsx  swap-card.tsx  wallet-connect.tsx
hooks/: use-linera.ts
lib/: linera-client.ts  linera.ts
linera-dex/: .gitignore  Cargo.toml  README.md  deploy.ps1  deploy.sh
linera-dex/src/: contract.rs  lib.rs  service.rs  state.rs
