[package]
name = "velocity-dex"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
async-graphql = "7.0.2"
bcs = "0.1"
linera-sdk = "0.13.0"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "velocity_dex_contract"
path = "src/contract.rs"

[[bin]]
name = "velocity_dex_service"
path = "src/service.rs"

[profile.release]
debug = false
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
linera-sdk = { version = "0.13.0", features = ["test"] }
